--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
+    implementation  'com.github.nkzawa:socket.io-client:0.6.0'
+    implementation 'com.neovisionaries:nv-websocket-client:2.3'
+
 }
